[gd_scene load_steps=7 format=3 uid="uid://cduw0aesw2m36"]

[ext_resource type="Script" path="res://Modules/FruitTree.gd" id="1_xahik"]
[ext_resource type="Texture2D" uid="uid://b55oxexekrwlh" path="res://assets/Bush.png" id="2_6og14"]
[ext_resource type="PackedScene" uid="uid://73ctti0pay2o" path="res://Modules/Light.tscn" id="4_b6i3q"]
[ext_resource type="Texture2D" uid="uid://mwcx63tifvyo" path="res://assets/Blueberry.png" id="4_i7l6k"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x74v4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u1hho"]
radius = 21.0

[node name="CherryTree" type="StaticBody2D"]
script = ExtResource("1_xahik")
grow_time = 10.0
can_be_fertilized = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_x74v4")
position = Vector2(0, -16)
texture = ExtResource("2_6og14")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -16)
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 15)
shape = SubResource("CircleShape2D_u1hho")

[node name="Details" type="Control" parent="."]
visible = false
z_index = 11
layout_mode = 3
anchors_preset = 0
offset_left = -10.0
offset_top = -10.0
offset_right = 30.0
offset_bottom = 30.0

[node name="TreeDetails" type="Label" parent="Details"]
layout_mode = 0
offset_left = 26.0
offset_top = -21.0
offset_right = 66.0
theme_override_font_sizes/font_size = 5
text = "0/6
20s"

[node name="VBoxContainer" type="VBoxContainer" parent="Details"]
layout_mode = 0
offset_left = 26.0
offset_right = 60.0
offset_bottom = 32.0
theme_override_constants/separation = 0

[node name="TakeButton" type="Button" parent="Details/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
text = "Take"

[node name="FertilizeButton" type="Button" parent="Details/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
text = "Fertilize"

[node name="TextureRect" type="TextureRect" parent="Details/VBoxContainer/FertilizeButton"]
show_behind_parent = true
texture_filter = 1
layout_mode = 0
offset_top = 4.0
offset_right = 6.0
offset_bottom = 10.0
texture = ExtResource("4_i7l6k")
expand_mode = 1

[node name="Light" parent="." instance=ExtResource("4_b6i3q")]
scale = Vector2(4, 4)
offset = Vector2(0, -4)

[connection signal="pressed" from="Details/VBoxContainer/TakeButton" to="." method="_on_take_button_pressed"]
[connection signal="pressed" from="Details/VBoxContainer/FertilizeButton" to="." method="_on_fertilize_button_pressed"]
